--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-polyfill": "^6.26.0",
+    "cross-env": "^5.2.0",
     "css-loader": "^3.0.0",
     "express": "^4.17.1",
     "live-server": "^1.2.1",
